crates/cribo/tests/snapshots/bundled_code@stdlib_module_name_collision.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/stdlib_module_name_collision/main.py
---
#!/usr/bin/env python3
# Generated by Cribo - Python Source Bundler
# https://github.com/ophidiarium/cribo

import sys as _sys
import importlib as _importlib
class _CriboModule():

    def __init__(self, m, p):
        self._m, self._p = m, p

    def __getattr__(self, n):
        f = self._p + '.' + n
        try:
            return _CriboModule(_importlib.import_module(f), f)
        except ImportError:
            return getattr(self._m, n)

    def __getattribute__(self, n):
        return object.__getattribute__(self, n) if n in ('_m', '_p', '__getattr__', '__class__', '__dict__', '__dir__', '__module__', '__qualname__') else getattr(object.__getattribute__(self, '_m'), n)
class _Cribo():

    def __getattr__(self, n):
        m = _sys.modules.get(n) or _importlib.import_module(n)
        return _CriboModule(m, n)
_cribo = _Cribo()
class _CriboPreservedLoader:

    def __init__(self, entry, namespace=None):
        self._entry = entry
        self._namespace = namespace

    def create_module(self, spec):
        if self._namespace is not None:
            return self._namespace
        if self._entry[1] is not None:
            return globals()[self._entry[1]]
        module = _cribo.types.SimpleNamespace(__name__=spec.name)
        for export, binding in self._entry[3].items():
            setattr(module, export, globals()[binding])
        return module

    def exec_module(self, module):
        init = self._entry[0]
        if init is None:
            return
        if getattr(module, '_cribo_machinery_loaded', False):
            module.__initialized__ = False
            module.__initializing__ = False
        state = dict(module.__dict__)
        try:
            globals()[init](module)
            module._cribo_machinery_loaded = True
        except BaseException:
            module.__dict__.clear()
            module.__dict__.update(state)
            module.__initializing__ = False
            raise
class _CriboPreservedFinder:

    def __init__(self):
        self._targets = {}
        self._namespaces = {}
        self._loader = _CriboPreservedLoader

    def register(self, name, init, namespace, is_package, exports=None):
        self._targets[name] = init, namespace, is_package, exports or {}

    def bind(self, name, namespace):
        self._namespaces[name] = namespace

    def find_spec(self, name, path=None, target=None):
        entry = self._targets.get(name)
        if entry is None:
            return None
        from importlib.machinery import ModuleSpec
        return ModuleSpec(name, self._loader(entry, self._namespaces.get(name)), is_package=entry[2])
_cribo_finder = _CriboPreservedFinder()
_sys.meta_path.append(_cribo_finder)
_cribo_finder.register('mypkg', '_cribo_init___cribo_9a2a8c_mypkg', 'mypkg', True)
_cribo_finder.register('mypkg.console', '_cribo_init___cribo_6558da_mypkg_console', 'mypkg_console', False)
_cribo_finder.register('mypkg.abc', None, None, False, {'MyBaseClass': 'MyBaseClass'})
mypkg_abc = _cribo.types.SimpleNamespace(__name__='mypkg.abc', __doc__="Local 'abc' module that imports from stdlib 'abc'.")
mypkg = _cribo.types.SimpleNamespace(__name__='mypkg', __initializing__=False, __initialized__=False, __path__=[])
mypkg.abc = mypkg_abc
"""Local 'abc' module that imports from stdlib 'abc'."""
class MyBaseClass(_cribo.abc.ABC):
    """Base class using stdlib ABC."""
    pass
MyBaseClass.__module__ = 'mypkg.abc'
def create_object():
    """Create an object for testing."""

    class TestObject(MyBaseClass):
        pass
    return TestObject()
mypkg_abc.MyBaseClass = MyBaseClass
mypkg_abc.create_object = create_object
mypkg_console = _cribo.types.SimpleNamespace(__name__='mypkg.console', __initializing__=False, __initialized__=False)
_cribo_finder.bind('mypkg.console', mypkg_console)
mypkg.console = mypkg_console
def _cribo_init___cribo_9a2a8c_mypkg(self):
    if getattr(self, '__initialized__', False):
        return self
    if getattr(self, '__initializing__', False):
        return self
    self.__initializing__ = True
    self.__package__ = 'mypkg'
    global mypkg_console
    """Package with modules including one named 'abc' (same as stdlib)."""
    mypkg_console = _cribo_init___cribo_6558da_mypkg_console(mypkg_console)
    console = mypkg.console
    self.console = console
    self.__initialized__ = True
    self.__initializing__ = False
    return self
mypkg.__init__ = _cribo_init___cribo_9a2a8c_mypkg
def _cribo_init___cribo_6558da_mypkg_console(self):
    if getattr(self, '__initialized__', False):
        return self
    if getattr(self, '__initializing__', False):
        return self
    self.__initializing__ = True
    self.__package__ = 'mypkg'
    """Console module that imports various stdlib modules."""
    abc = _cribo.abc
    self.abc = abc
    self.abc = abc
    typing = _cribo.typing
    self.typing = typing
    self.typing = typing
    enum = _cribo.enum
    self.enum = enum
    self.enum = enum
    threading = _cribo.threading
    self.threading = threading
    self.threading = threading
    ctypes = _cribo.ctypes
    self.ctypes = ctypes
    self.ctypes = ctypes
    local_abc = mypkg_abc
    self.local_abc = local_abc

    def test_function():
        """Test function using imports."""
        if _cribo.abc.ABC:
            my_list: _cribo.typing.List[str] = ["test"]
            TestEnum = _cribo.enum.Enum("TestEnum", ["A", "B"])
            obj = local_abc.create_object()
            loader = _cribo.importlib.machinery.SourceFileLoader
            return f"Success with {my_list} and {TestEnum.A} and {loader.__name__}"
        return "Failed"
    test_function.__module__ = 'mypkg.console'
    test_function.__qualname__ = 'test_function'
    self.test_function = test_function
    self.__initialized__ = True
    self.__initializing__ = False
    return self
mypkg_console.__init__ = _cribo_init___cribo_6558da_mypkg_console
"""Test that triggers stdlib import collision bug when bundling packages."""
__cribo_init_result = _cribo_init___cribo_9a2a8c_mypkg(mypkg)
for attr in dir(__cribo_init_result):
    if not attr.startswith('_'):
        setattr(mypkg, attr, getattr(__cribo_init_result, attr))
result = mypkg.console.test_function()
print(f"Result: {result}")
obj = mypkg.abc.create_object()
print(f"Object type: {type(obj).__name__}")
print("Test completed successfully")
console = mypkg.console
abc = mypkg.abc
