crates/cribo/tests/snapshots/bundled_code@stdlib_module_name_conflict.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/stdlib_module_name_conflict/main.py
---
#!/usr/bin/env python3
# Generated by Cribo - Python Source Bundler
# https://github.com/ophidiarium/cribo

import sys as _sys
import importlib as _importlib
class _CriboModule():

    def __init__(self, m, p):
        self._m, self._p = m, p

    def __getattr__(self, n):
        f = self._p + '.' + n
        try:
            return _CriboModule(_importlib.import_module(f), f)
        except ImportError:
            return getattr(self._m, n)

    def __getattribute__(self, n):
        return object.__getattribute__(self, n) if n in ('_m', '_p', '__getattr__', '__class__', '__dict__', '__dir__', '__module__', '__qualname__') else getattr(object.__getattribute__(self, '_m'), n)
class _Cribo():

    def __getattr__(self, n):
        m = _sys.modules.get(n) or _importlib.import_module(n)
        return _CriboModule(m, n)
_cribo = _Cribo()
class _CriboPreservedLoader:

    def __init__(self, entry):
        self._entry = entry

    def create_module(self, spec):
        namespace = self._entry[1]
        if namespace is not None:
            return globals()[namespace]
        module = _cribo.types.SimpleNamespace(__name__=spec.name)
        for export, binding in self._entry[3].items():
            setattr(module, export, globals()[binding])
        return module

    def exec_module(self, module):
        init = self._entry[0]
        if init is None:
            return
        try:
            globals()[init](module)
        except BaseException:
            module.__initializing__ = False
            raise
class _CriboPreservedFinder:

    def __init__(self):
        self._targets = {}
        self._loader = _CriboPreservedLoader

    def register(self, name, init, namespace, is_package, exports=None):
        self._targets[name] = init, namespace, is_package, exports or {}

    def find_spec(self, name, path=None, target=None):
        entry = self._targets.get(name)
        if entry is None:
            return None
        from importlib.machinery import ModuleSpec
        return ModuleSpec(name, self._loader(entry), is_package=entry[2])
_cribo_finder = _CriboPreservedFinder()
_sys.meta_path.append(_cribo_finder)
_cribo_finder.register('mypackage', None, 'mypackage', True)
_cribo_finder.register('mypackage.abc', None, None, False, {'MyClass': 'MyClass'})
mypackage_abc = _cribo.types.SimpleNamespace(__name__='mypackage.abc')
mypackage = _cribo.types.SimpleNamespace(__name__='mypackage', __initializing__=False, __initialized__=False, __path__=[])
mypackage.abc = mypackage_abc
ABC = _cribo.abc.ABC
class MyClass(_cribo.abc.ABC):
    """A class that uses ABC from the stdlib."""

    def get_name(self):
        return "MyClass instance"

    @classmethod
    def __subclasshook__(cls, other):
        """Check if this class supports a protocol."""
        return hasattr(other, "__special__")
MyClass.__module__ = 'mypackage.abc'
mypackage_abc.ABC = ABC
mypackage_abc.MyClass = MyClass
abc = mypackage_abc
obj = abc.MyClass()
print(obj.get_name())
print(f"Is MyClass a subclass of ABC? {issubclass(abc.MyClass, abc.ABC)}")
