crates/cribo/tests/snapshots/bundled_code@stdlib_name_conflict_ordering.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/stdlib_name_conflict_ordering/main.py
---
#!/usr/bin/env python3
# Generated by Cribo - Python Source Bundler
# https://github.com/ophidiarium/cribo

import sys as _sys
import importlib as _importlib
class _CriboModule():

    def __init__(self, m, p):
        self._m, self._p = m, p

    def __getattr__(self, n):
        f = self._p + '.' + n
        try:
            return _CriboModule(_importlib.import_module(f), f)
        except ImportError:
            return getattr(self._m, n)

    def __getattribute__(self, n):
        return object.__getattribute__(self, n) if n in ('_m', '_p', '__getattr__', '__class__', '__dict__', '__dir__', '__module__', '__qualname__') else getattr(object.__getattribute__(self, '_m'), n)
class _Cribo():

    def __getattr__(self, n):
        m = _sys.modules.get(n) or _importlib.import_module(n)
        return _CriboModule(m, n)
_cribo = _Cribo()
class _CriboPreservedLoader:

    def __init__(self, entry, namespace=None):
        self._entry = entry
        self._namespace = namespace

    def create_module(self, spec):
        if self._namespace is not None:
            return self._namespace
        if self._entry[1] is not None:
            return globals()[self._entry[1]]
        module = _cribo.types.SimpleNamespace(__name__=spec.name)
        for export, binding in self._entry[3].items():
            setattr(module, export, globals()[binding])
        return module

    def exec_module(self, module):
        init = self._entry[0]
        if init is None:
            return
        if getattr(module, '_cribo_machinery_loaded', False):
            module.__initialized__ = False
            module.__initializing__ = False
        state = dict(module.__dict__)
        try:
            globals()[init](module)
            module._cribo_machinery_loaded = True
        except BaseException:
            module.__dict__.clear()
            module.__dict__.update(state)
            module.__initializing__ = False
            raise
class _CriboPreservedFinder:

    def __init__(self):
        self._targets = {}
        self._namespaces = {}
        self._loader = _CriboPreservedLoader

    def register(self, name, init, namespace, is_package, exports=None):
        self._targets[name] = init, namespace, is_package, exports or {}

    def bind(self, name, namespace):
        self._namespaces[name] = namespace

    def find_spec(self, name, path=None, target=None):
        entry = self._targets.get(name)
        if entry is None:
            return None
        from importlib.machinery import ModuleSpec
        return ModuleSpec(name, self._loader(entry, self._namespaces.get(name)), is_package=entry[2])
_cribo_finder = _CriboPreservedFinder()
_sys.meta_path.append(_cribo_finder)
_cribo_finder.register('complex_pkg', '_cribo_init___cribo_937418_complex_pkg', 'complex_pkg', True)
_cribo_finder.register('complex_pkg.console', '_cribo_init___cribo_beaba5_complex_pkg_console', 'complex_pkg_console', False)
_cribo_finder.register('complex_pkg.abc', None, None, False, {'Base': 'Base'})
complex_pkg_abc = _cribo.types.SimpleNamespace(__name__='complex_pkg.abc')
complex_pkg = _cribo.types.SimpleNamespace(__name__='complex_pkg', __initializing__=False, __initialized__=False, __path__=[])
complex_pkg.abc = complex_pkg_abc
class Base(_cribo.abc.ABC):
    """Base class like rich.abc.RichRenderable"""

    @_cribo.abc.abstractmethod
    def render(self):
        pass

    @classmethod
    def __subclasshook__(cls, other):
        return hasattr(other, "render")
Base.__module__ = 'complex_pkg.abc'
complex_pkg_abc.Base = Base
complex_pkg_console = _cribo.types.SimpleNamespace(__name__='complex_pkg.console', __initializing__=False, __initialized__=False)
_cribo_finder.bind('complex_pkg.console', complex_pkg_console)
complex_pkg.console = complex_pkg_console
def _cribo_init___cribo_937418_complex_pkg(self):
    if getattr(self, '__initialized__', False):
        return self
    if getattr(self, '__initializing__', False):
        return self
    self.__initializing__ = True
    self.__package__ = 'complex_pkg'
    self.__doc__ = None
    global complex_pkg_console
    Base = complex_pkg_abc.Base
    complex_pkg.Base = Base
    complex_pkg_console = _cribo_init___cribo_beaba5_complex_pkg_console(complex_pkg_console)
    Console = complex_pkg_console.Console
    self.Console = Console
    self.Console = Console

    def main():
        console = Console()
        console.print("Testing")
    main.__module__ = 'complex_pkg'
    main.__qualname__ = 'main'
    self.main = main
    self.abc = complex_pkg_abc
    self.__initialized__ = True
    self.__initializing__ = False
    return self
complex_pkg.__init__ = _cribo_init___cribo_937418_complex_pkg
def _cribo_init___cribo_beaba5_complex_pkg_console(self):
    if getattr(self, '__initialized__', False):
        return self
    if getattr(self, '__initializing__', False):
        return self
    self.__initializing__ = True
    self.__package__ = 'complex_pkg'
    self.__doc__ = None
    Any = _cribo.typing.Any
    self.Any = Any
    Optional = _cribo.typing.Optional
    self.Optional = Optional
    List = _cribo.typing.List
    self.List = List
    Enum = _cribo.enum.Enum
    self.Enum = Enum
    Base = complex_pkg_abc.Base
    complex_pkg_console.Base = Base

    class RenderMode(_cribo.enum.Enum):
        DEFAULT = "default"
        HTML = "html"
    RenderMode.__module__ = 'complex_pkg.console'
    RenderMode.__qualname__ = 'RenderMode'
    self.RenderMode = RenderMode

    class Console(Base):
        """Console class similar to rich.console.Console"""

        def __init__(self):
            self.buffer: _cribo.typing.List[str] = []

        def render(self):
            return "\n".join(self.buffer)

        def print(self, *args: _cribo.typing.Any):
            self.buffer.append(" ".join(str(arg) for arg in args))
            print(*args)
    Console.__module__ = 'complex_pkg.console'
    Console.__qualname__ = 'Console'
    self.Console = Console
    self.Any = _cribo.typing.Any
    self.Optional = _cribo.typing.Optional
    self.List = _cribo.typing.List
    self.Enum = _cribo.enum.Enum
    self.__initialized__ = True
    self.__initializing__ = False
    return self
complex_pkg_console.__init__ = _cribo_init___cribo_beaba5_complex_pkg_console
__cribo_init_result = _cribo_init___cribo_937418_complex_pkg(complex_pkg)
for attr in dir(__cribo_init_result):
    if not attr.startswith('_'):
        setattr(complex_pkg, attr, getattr(__cribo_init_result, attr))
main = complex_pkg.main
main()
console = complex_pkg.console
abc = complex_pkg.abc
