crates/cribo/tests/snapshots/bundled_code@stickytape_explicit_relative_import.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/stickytape_explicit_relative_import/main.py
---
#!/usr/bin/env python3
# Generated by Cribo - Python Source Bundler
# https://github.com/ophidiarium/cribo

import sys as _sys
import importlib as _importlib
class _CriboModule():

    def __init__(self, m, p):
        self._m, self._p = m, p

    def __getattr__(self, n):
        f = self._p + '.' + n
        try:
            return _CriboModule(_importlib.import_module(f), f)
        except ImportError:
            return getattr(self._m, n)

    def __getattribute__(self, n):
        return object.__getattribute__(self, n) if n in ('_m', '_p', '__getattr__', '__class__', '__dict__', '__dir__', '__module__', '__qualname__') else getattr(object.__getattribute__(self, '_m'), n)
class _Cribo():

    def __getattr__(self, n):
        m = _sys.modules.get(n) or _importlib.import_module(n)
        return _CriboModule(m, n)
_cribo = _Cribo()
class _CriboPreservedLoader:
    _pristine = {}

    def __init__(self, entry, namespace=None):
        self._entry = entry
        self._namespace = namespace

    def create_module(self, spec):
        if self._namespace is not None:
            return self._namespace
        if self._entry[1] is not None:
            return globals()[self._entry[1]]
        module = _cribo.types.SimpleNamespace(__name__=spec.name)
        for export, binding in self._entry[3].items():
            setattr(module, export, globals()[binding])
        return module

    def exec_module(self, module):
        init = self._entry[0]
        if init is None:
            return
        pristine = type(self)._pristine
        key = id(module)
        if getattr(module, '_cribo_machinery_loaded', False):
            saved = pristine.get(key)
            if saved is not None:
                module.__dict__.clear()
                module.__dict__.update(saved)
            module.__initialized__ = False
            module.__initializing__ = False
        state = dict(module.__dict__)
        if key not in pristine:
            pristine[key] = dict(state)
        try:
            globals()[init](module)
            module._cribo_machinery_loaded = True
        except BaseException:
            module.__dict__.clear()
            module.__dict__.update(state)
            module.__initializing__ = False
            raise
class _CriboPreservedFinder:

    def __init__(self):
        self._targets = {}
        self._namespaces = {}
        self._loader = _CriboPreservedLoader

    def register(self, name, init, namespace, is_package, exports=None):
        self._targets[name] = init, namespace, is_package, exports or {}

    def bind(self, name, namespace):
        self._namespaces[name] = namespace

    def find_spec(self, name, path=None, target=None):
        entry = self._targets.get(name)
        if entry is None:
            return None
        from importlib.machinery import ModuleSpec
        return ModuleSpec(name, self._loader(entry, self._namespaces.get(name)), is_package=entry[2])
_cribo_finder = _CriboPreservedFinder()
_sys.meta_path.append(_cribo_finder)
_cribo_finder_local = _CriboPreservedFinder()
_cribo_finder_local._namespaces = _cribo_finder._namespaces
for _cribo_index, _cribo_meta_finder in enumerate(_sys.meta_path):
    if getattr(_cribo_meta_finder, '__name__', '') == 'PathFinder':
        _sys.meta_path.insert(_cribo_index, _cribo_finder_local)
        break
else:
    _sys.meta_path.insert(0, _cribo_finder_local)
greetings_messages = _cribo.types.SimpleNamespace(__name__='greetings.messages')
greetings = _cribo.types.SimpleNamespace(__name__='greetings', __initializing__=False, __initialized__=False, __path__=[])
greetings.messages = greetings_messages
message = "Hello"
greetings_messages.message = message
greetings_greeting = _cribo.types.SimpleNamespace(__name__='greetings.greeting')
greetings.greeting = greetings_greeting
greetings_greeting.message = message
print(greetings.greeting.message)
greeting = greetings.greeting
messages = greetings.messages
